--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -18,7 +18,7 @@
 
         <div class="col-lg-3 col-md-6 mb-4">
           <div class="card">
-            <%= image_tag("joggingfrejus800.jpg", class:"card-img-top") %>
+            <%= image_tag("joggingland800.jpg", class:"card-img-top") %>
             <div class="card-body">
               <h4 class="card-title">Courir pour la paix</h4>
               <p class="card-text">Viens courir pour la paix</p>
