--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -1,2 +1,22 @@
-<h1>Challenges#new</h1>
-<p>Find me in app/views/challenges/new.html.erb</p>
+
+
+<h1> Créer un nouveau challenge </h1>
+<div class="row">
+ <div class="col-md-6 col-md-offset-3">
+   <p><%= label_tag 'name', "quel est le nom de votre challenge?" %></p>
+   <p><%= text_field_tag(:name) %></p>
+
+   <p><%= label_tag 'description', "Décrivez votre challenge" %></p>
+   <p><%= text_field_tag(:description) %></p>
+
+   <p><%= label_tag 'place', "Quand se déroule votre challenge ?" %></p>
+   <p><%= text_field_tag(:date)%></p>
+
+
+</div>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <p><%= submit_tag 'je créé mon event', class:"btn btn-primary"%></p>
+  </div>
+</div>
