--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -31,7 +31,7 @@
               </div>
               <div class="card-footer">
                 <% chal.categories.each do |cat| %>
-                  <span class="label label-danger"><%= cat.category_name%></span>
+                  <span class="badge badge-pill badge-danger"><%= cat.category_name %></span> 
                 <% end %>
               </div>
               <div class="card-footer">
