--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
       <div class="container">
         <a class="navbar-brand" href="#">ChallengR</a>
 
@@ -36,3 +36,4 @@
         </div>
       </div>
     </nav>
+ 
