--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
       <div class="container">
-        <a class="navbar-brand" href="#">ChallengR</a>
-
+        <%= link_to "ChallengR", root_path, class:'navbar-brand'%>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -12,23 +11,25 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Accueil
+              <%= link_to "<span data-feather='home'></span> Accueil".html_safe, root_path, class:'nav-link'%>
                 <span class="sr-only">(current)</span>
-              </a>
             </li>
             <% if user_signed_in? %>
               <li class="nav-item">
-                <a class="nav-link" href="#">Mes challenges</a>
+                <%= link_to "<span data-feather='user'></span> Mon compte".html_safe, profile_path(current_user), class:'nav-link'%>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:'nav-link'%>
+                <%= link_to "<span data-feather='trending-up'></span> Mes résultats".html_safe, profile_path(current_user), class:'nav-link'%>
+              </li>
+              <li class="nav-item">
+                <%= link_to "<span data-feather='log-out'></span> Se déconnecter".html_safe, destroy_user_session_path, method: :delete, class:'nav-link'%>
               </li>
             <% else %>
               <li class="nav-item">
-                <%= link_to "Sign in", new_user_session_path, class:'nav-link'%>
+                <%= link_to "<span data-feather='log-in'></span> Se connecter".html_safe, new_user_session_path, class:'nav-link'%>
               </li>
               <li class="nav-item">
-                <%= link_to "Sign up", new_user_registration_path, class:'nav-link'%>
+                <%= link_to "<span data-feather='user'></span> S'inscrire".html_safe, new_user_registration_path, class:'nav-link'%>
               </li>
             <% end %>
           </ul>
