working on challenge show and index

--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -32,8 +32,8 @@
             <%=  sbg.label :subgoal_unit %>
             <%= sbg.text_field :subgoal_unit %>
 
-        <%= sbg.label :duedate %>
-        <%= sbg.date_field :duedate %>
+        <%= sbg.label :deadline %>
+        <%= sbg.date_field :deadline %>
 
          <%= sbg.label :description %>
         <%= sbg.text_field :description %>
