en cours de modif chartkick

--- a/app/views/challenges/index.html.erb
+++ b/app/views/challenges/index.html.erb
@@ -43,4 +43,8 @@
         <% end %>
 
     </div><!-- /.row -->
+ 
+    
 </div> <!-- /.container -->
+<script src='https://www.google.com/jsapi'></script>
+<%= pie_chart({"Football" => 10, "Basketball" => 5}) %>
