--- a/app/views/challenges/edit.html.erb
+++ b/app/views/challenges/edit.html.erb
@@ -1,2 +1,10 @@
-<h1>Challenges#edit</h1>
-<p>Find me in app/views/challenges/edit.html.erb</p>
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+
+<h1>Modifiez votre challenge </h1>
+
+<%= render  "partials/full_challenge_form" %>
