can delete challenge if you're the organizer

--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -14,8 +14,9 @@
           <div class="card mt-4">
             <%= link_to "Je participe", join_challenge_path, class:"btn btn-success", :method => :post %>
             <% if current_user == @challenge.organizer %>
-            <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info"%>
-          <%end%>
+              <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info"%>
+              <%= link_to "Delete", @challenge, class:"btn btn-danger", method: :delete, data: { confirm: "Really?" } %>          
+            <%end %>
           </div>
 
           <div class="card mt-4 p-4">
