--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,12 @@
   </head>
 
   <body>
-  	<%= render "shared/navbar" %>
+  	<%= render "partials/navbar" %>
     </br>
     </br>
-    <%= render "shared/flash" %>
+    <%= render "partials/flash" %>
     <%= yield %>
-    
+
       <!-- Icons -->
     <script src="https://unpkg.com/feather-icons/dist/feather.min.js"></script>
     <script>
