--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,11 +1,11 @@
 </br>
 <div class="container">
     <div class="row">
-        <div class="col-3-sm">
-            <%= render 'shared/dash_sidebar' %>
+        <div class="col-lg-3">
+            <%= render 'partials/dash_sidebar' %>
         </div>
-        <div class="col-9-sm">
-            <%= render 'shared/dash_subgoals' %>
+        <div class="col-lg-9">
+            <%= render 'partials/dash_subgoals' %>
         </div>
     </div>
 </div>
