--- a/app/views/partials/_dash_graph1.html.erb
+++ b/app/views/partials/_dash_graph1.html.erb
@@ -12,7 +12,7 @@
         Indicateurs
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdrown-item">
-        <a class="dropdown-item active" href="#">Réalisé ou pas</a>
+        <a class="dropdown-item active" id="done" href="#">Réalisé ou pas</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#">km</a>
         <a class="dropdown-item" href="#">mn</a>
@@ -25,11 +25,11 @@
         Période
       </button>
       <div class="dropdown-menu" aria-labelledby="dropdrown-item">
-        <a class="dropdown-item active" href="#">Semaine</a>
-        <a class="dropdown-item" href="#">Mois</a>
-        <a class="dropdown-item" href="#">Année</a>
+        <a class="dropdown-item active" id="semaine" href="#">Semaine</a>
+        <a class="dropdown-item" id="mois" href="#">Mois</a>
+        <a class="dropdown-item" id="année" href="#">Année</a>
         <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Tous</a>
+        <a class="dropdown-item" id="dureetotale" href="#">Durée totale</a>
       </div><!-- dropdown menu -->
     </div><!-- btn-group -->
 </div><!-- btn toolbar -->
@@ -38,34 +38,74 @@
 <canvas class="my-2" id="myChart" width="800" height="200"></canvas>
 
 <!-- Graphs -->
+<script src="http://www.chartjs.org/dist/2.7.2/Chart.bundle.js"></script>
+<script src="http://www.chartjs.org/samples/latest/utils.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.min.js"></script>
-<script>
-      var ctx = document.getElementById("myChart");
-      var date_accomplished = <%= raw @participations.find_by_challenge_id(Challenge.find_by_goal("courir un marathon").id).stats %>;
-      var myChart = new Chart(ctx, {
-        type: 'line',
-        data: {
-          labels:<%= raw Challenge.first.subgoals %>,
-          datasets: [{
-            data: [15339, 21345, 18483, 24003, 23489, 24092, 12034],
-            lineTension: 0,
-            backgroundColor: 'transparent',
-            borderColor: '#007bff',
-            borderWidth: 4,
-            pointBackgroundColor: '#007bff'
-          }]
-        },
-        options: {
-          scales: {
-            yAxes: [{
-              ticks: {
-                beginAtZero: false
-              }
-            }]
-          },
-          legend: {
-            display: false,
+
+<script id="chartscript">
+
+
+    var obj_names = [];
+    for(var x=0; x<gon.data["subgoals_bests"].length; x++){
+      obj_names[x] = gon.data["subgoals_bests"][x]["name"];
+    }
+    		var config = {
+    			type: 'line',
+    			data:
+          {
+    				labels: obj_names,
+    				datasets: [{}]
+    			},
+    			options: {
+    				responsive: true,
+    				title: {
+    					display: true,
+    					text: 'Chart.js Line Chart'
+    				},
+    				tooltips: {
+    					mode: 'index',
+    					intersect: false,
+    				},
+    				hover: {
+    					mode: 'nearest',
+    					intersect: true
+    				},
+    				scales: {
+    					xAxes: [{
+    						display: true,
+    						scaleLabel: {
+    							display: true,
+    							labelString: 'Subgoal'
+    						}
+    					}],
+    					yAxes: [{
+    						display: true,
+    						scaleLabel: {
+    							display: true,
+    							labelString: 'Value (%)'
+    						}
+    					}]
+    				}
+    			}
+    		};
+        var colors = [window.chartColors.red, window.chartColors.blue, window.chartColors.yellow, window.chartColors.orange, window.chartColors.black];
+for(var x=0; x<gon.data["targets"].length; x++) {
+  datarray = [];
+          for(var y=0; y<gon.data["subgoals_bests"].length; y++){
+            datarray[y] = 100*gon.data["subgoals_bests"][y]["best"][gon.data["targets"][x]][0]/gon.data["subgoals_bests"][y]["best"][gon.data["targets"][x]][1]
           }
+          config["data"]["datasets"][x] = {
+          label: gon.data["targets"][x],
+          fill: false,
+          backgroundColor: colors[x],
+          borderColor: colors[x],
+          data: datarray,
+
+          };
         }
-      });
-</script>
+
+    		window.onload = function() {
+    			var ctx = document.getElementById('myChart').getContext('2d');
+    			window.myLine = new Chart(ctx, config);
+    		};
+	</script>
