--- a/app/views/challenges/_subgoal_form.html.erb
+++ b/app/views/challenges/_subgoal_form.html.erb
@@ -12,6 +12,8 @@
  <%= f.label :subgoal_unit, "Unité de mesure", class:"col-sm-2 col-form-label" %>
  <%= f.text_field :subgoal_unit, class:"form-control col-sm-10" %>
 </div>
+<%= render  "partials/subgoal_units", f:f %>
+
 
 <div class="form-group row">
  <%= f.label :deadline, "Date limite du sous-objectif", class:"col-sm-2 col-form-label" %>
