--- a/app/views/challenges/_subgoal_form.html.erb
+++ b/app/views/challenges/_subgoal_form.html.erb
@@ -3,17 +3,15 @@
  <%= f.text_field :subgoal_string, class:"form-control col-sm-10" %>
 </div>
 
-<div class="form-group row"> 
- <%= f.label :subgoal_int, "Mesure chiffré",class:"col-sm-2 col-form-label"%>
- <%= f.number_field :subgoal_int, class:"form-control col-sm-10" %>
-</div>
+  <%= f.nested_fields_for "targets" do |target| %>
+    <%= render  "partials/target_form", f:target %>
+  <% end %>
 
-<div class="form-group row">
- <%= f.label :subgoal_unit, "Unité de mesure", class:"col-sm-2 col-form-label" %>
- <%= f.text_field :subgoal_unit, class:"form-control col-sm-10" %>
-</div>
-<%= render  "partials/subgoal_units", f:f %>
-
+  <div class="btn">
+      <%= f.add_nested_fields_link :targets do %>
+        <span class="glyphicon glyphicon-plus btn btn-sm btn-info">Ajouter une cible</span>
+      <% end %>
+  </div>
 
 <div class="form-group row">
  <%= f.label :deadline, "Date limite du sous-objectif", class:"col-sm-2 col-form-label" %>
@@ -25,15 +23,5 @@
  <%= f.text_area :description, class:"form-control col-sm-10" %>
 </div>
 
-<div class="form-group row">
- <%= f.label :accomplished, "Accomplis ?",class:"col-sm-2 col-form-label " %>
- <%= f.check_box :accomplished, class:"form-control col-sm-10 form-check checked "%>
-</div>
-
- 
  <%= f.remove_nested_fields_link "Supprimer l'objectif", class: 'btn btn-sm btn-danger pull-right', role: 'button' %>
 <br>
-   
-
-
-
