--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -15,7 +15,7 @@
             <%= link_to "Je participe", join_challenge_path, class:"btn btn-success", :method => :post %>
             <% if current_user == @challenge.organizer %>
               <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info"%>
-              <%= link_to "Delete", @challenge, class:"btn btn-danger", method: :delete, data: { confirm: "Really?" } %>          
+              <%= link_to "Delete", @challenge, class:"btn btn-danger", method: :delete, data: { confirm: "Really?" } %>
             <%end %>
           </div>
 
@@ -34,7 +34,7 @@
 
           <div class="card mt-4">
 
-            <%= image_tag(@challenge.image_url, height:"400", class:"card-img-top img-fluid") %>
+            <%= image_tag(@challenge.image.url, height:"400", class:"card-img-top img-fluid") %>
             <div class="card-body">
               <h3 class="card-title" id="pres">Présentation</h3>
               <p>Créé par <strong><%= @challenge.organizer.username %></strong></p>
