--- a/app/views/partials/_target_form.html.erb
+++ b/app/views/partials/_target_form.html.erb
@@ -4,7 +4,7 @@
 </div>
 
 <div class="form-group row">
- <%= f.label :value, "Cible à atteindre",class:"col-sm-2 col-form-label"%>
+ <%= f.label :value, "Valeur cible à atteindre",class:"col-sm-2 col-form-label"%>
  <%= f.number_field :value, class:"form-control col-sm-10" %>
 </div>
 
