--- a/app/views/challenges/new.html.erb
+++ b/app/views/challenges/new.html.erb
@@ -10,42 +10,4 @@
 
 <h1>Qu'allez vous accomplir ?</h1>
 
-<%= render  "partials/full_challenge_form" %>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+<%= render  "partials/chall_full" %>
