--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -12,8 +12,10 @@
           </div>
           	</br>
           <div class="card mt-4">
+
             <%= link_to "Je participe", join_challenge_path, class:"btn btn-success", :method => :post %>
             <% if current_user == @challenge.organizer %>
+            <%= link_to "J'ajoute des targets", addtargetstosubgoals_path, class:"btn btn-success" %>
               <%= link_to "Je modifie le challenge", edit_challenge_path, class:"btn btn-info"%>
               <%= link_to "Delete", @challenge, class:"btn btn-danger", method: :delete, data: { confirm: "Really?" } %>
             <%end %>
