--- a/app/views/challenges/show.html.erb
+++ b/app/views/challenges/show.html.erb
@@ -26,6 +26,7 @@
           	<% @challenge.categories.each do |cat| %>
           		<span class="badge badge-pill badge-info"><%= cat.category_name %>   <a class='fa fa-times' href="<%=@challenge.id%>/categoremove/<%=cat.id%>" style='font-size:12px; color:red;'></a></span> 
 <%end%>
+<%if current_user != nil%>
 <%if @challenge.organizer == current_user || current_user.role == "admin"%>
 <div class="dropdown">
   <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -34,6 +35,7 @@
   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
 <%Category.all.each do |cat|%>
     <a class="dropdown-item" href="<%=@challenge.id%>/categories/<%= cat.id %>"><%=cat.category_name%></a>
+<%end%>
 <%end%>
   <%= form_tag("../categories/create/#{@challenge.id}", method: "post") do %>
   <%= label_tag(:category_name, "new category:") %>
