--- a/app/views/challenges/edit_units.html.erb
+++ b/app/views/challenges/edit_units.html.erb
@@ -1,30 +1,18 @@
 </br></br></br>
-<button id="choose_unit">Add Unit</button>
-<input id="chosen_unit" type="text">
-<%= form_tag("/updateunits", method: "post") do %>
-
+<%=form_tag("/challenges/#{@challenge.id}/addunit", method: "post") do%>
+  <%= label_tag(:unit_name, "Type the Unit you want to mesure") %>
+  <%= text_field_tag(:unit_name) %>
+<%@challenge.units.each do |unit|%>
+  <%=unit.unit_name%>
+<a class='fa fa-times' href="removeunit/<%=unit.id%>" style='font-size:12px; color:red;'></a>
+<%end%>
+  <%= submit_tag("Add Unit") %>
+<%end%>
+<%= form_tag("/#{@challenge.id}/preupdateunits", method: "post") do %>
   <% @challenge.subgoals.each do |sub| %>
     <div class="subgoal" id="<%=sub.id%>">
       <%= sub.subgoal_string %>
     </div>
   <% end %>
-  <%= submit_tag("Search") %>
+  <%= submit_tag("Edit") %>
 <% end %>
-
-<script>$(document).on('turbolinks:load', function() {
-
- $('#choose_unit').on('click', function(e){
- $('[class*="subgoal"]').each( function(index, div){
- var stringtoset = setunit($(div).attr("id"))
- $('div').append(stringtoset)});
- });  
-});
-
-function setunit(x) {
-var a = '<%=j label_tag(:field) %><%=j text_field_tag(';
-var b = x;
-var c = ') %>';
-var str = a.concat(b,c);
-return str
-}
-</script>
